syntax = "proto2";

package securefs;

import "google/protobuf/descriptor.proto";

message ArgOption
{
    optional string doc = 1;
    optional bool is_required = 2;
    optional bool positional = 3;
    optional string short_name = 4;
}

extend google.protobuf.FieldOptions
{
    optional ArgOption arg_option = 60056698;
}

message CreateCmdOptions
{
    optional string repository = 1 [
        (arg_option) = {
            doc : "The path to the directory to store files.",
            is_required : true,
            positional : true,
        }
    ];
    optional string tree_db = 2 [ (arg_option) = {
        doc : "If not empty, save the tree.db in this path rather than under the repository."
    } ];
    optional string password = 3 [ (arg_option) = {
        doc : "If empty, password shall be input from the command line."
    } ];
    optional string key_file = 4 [ (arg_option) = {
        doc : "Path to the key file."
    } ];
    optional bool exact_name = 5 [ (arg_option) = {
        doc : "If set, the filesystem will not support case insensitive and Unicode normalized name lookup. This can save some storage, if you only use Linux/BSD."
    } ];
}
