syntax = "proto3";

package securefs;

import "protos/argopt.proto";

message SecureFSParams
{
    int32 format_version = 1;
    bool exact_name_only = 2;
    uint64 underlying_block_size = 3;
    uint64 virtual_block_size_for_tree_db = 4;
}

message EncryptedData
{
    bytes iv = 1;
    bytes mac = 2;
    bytes ciphertext = 3;
}

message MasterKeys
{
    bytes tree_key = 1;
    bytes file_key = 2;
    bytes padding_key = 3;
}

message Argon2idParams
{
    int64 time_cost = 1 [
        (arg_option) = {
            doc : "Defines the amount of computation realized and therefore the execution time, given in number of iterations."
            alt_name : "t"
        }
    ];
    int64 memory_cost = 2 [
        (arg_option) = {
            doc : "Defines the memory usage, given in MiB."
            alt_name : "m"
        }
    ];
    int64 parallelism = 3 [
        (arg_option) = {
            doc : " Defines the number of parallel threads (changes the resulting hash value)."
            alt_name : "p"
        }
    ];
}

message SecureFSConfig
{
    SecureFSParams params = 1;
    EncryptedData encrypted_master_keys = 2;
    oneof pbkdf
    {
        Argon2idParams argon2_params = 3;
    }
}
