syntax = "proto3";

package securefs;

message EncryptionParams {
    bytes key = 1;
    uint64 underlying_block_size = 2;
    bool only_warn_on_verification_error = 3;
}

message EncryptedVfsParams {
    EncryptionParams encryption_params = 1;
    bool read_only = 2;
}
